# sgx-autotools-templates

./: .gitignore  Makefile.am  Makefile.in  README  README.html  README.md  aclocal.m4  configure  configure.ac  sgx_init.m4
am/: sgx.am  sgx_app.am  sgx_enclave.am  sgx_tlib.am
autom4te.cache/: output.0  output.1  output.3  output.4  output.5  output.6  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6
build-aux/: sgx_app.am  sgx_enclave.am  sgx_tlib.am
m4/: sgx_add_enclaves.m4  sgx_config_openenclave.m4  sgx_config_sgxsdk.m4  sgx_init.m4  sgx_init_optional.m4  sgx_tstdc_check.m4  sgx_tstdc_check_prefix.m4
sample/: EnclaveHash_u.c  EnclaveHash_u.h  Makefile.am  Makefile.in  bootstrap  config.h.in  config.h.in~  main.c  sgx_detect_linux.c  sgx_stub.c
sample/EnclaveHash/: EnclaveHash_t.c  Makefile.am  Makefile.in
sample/m4/: sgx_init.m4
samples/sgx-optional/: Makefile.am  Makefile.in  aclocal.m4  bootstrap  config.h.in  configure  configure.ac  main.c
samples/sgx-optional/EnclaveHash/: EnclaveHash.c  EnclaveHash_t.c  EnclaveHash_t.h  Makefile  Makefile.am  Makefile.in
samples/sgx-optional/EnclaveHash/.deps/: EnclaveHash.Po  EnclaveHash_t.Po
samples/sgx-optional/m4/: sgx_init.m4  sgx_init_optional.m4
samples/sgx-required/: Makefile  Makefile.am  bootstrap  config.h  config.h.in  config.h.in~  config.status  configure.ac  main.c  sgx_detect_linux.c
samples/sgx-required/.deps/: EnclaveHash_u.Po  main.Po  sgx_detect_linux.Po  sgx_stub.Po
samples/sgx-required/EnclaveHash/: EnclaveHash.c  EnclaveHash.config.xml  EnclaveHash.edl  EnclaveHash_private.pem  Makefile  Makefile.am
samples/sgx-required/build-aux/: sgx_app.am
samples/sgx-required/m4/: sgx_init.m4  sgx_init_optional.m4
